commit	modified:   src/document.ipynb

--- a/src/document.ipynb
+++ b/src/document.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e3cd927e",
    "metadata": {},
    "outputs": [
@@ -10,30 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please provide your Kaggle credentials to download this dataset. Learn more: http://bit.ly/kaggle-creds\n",
-      "Your Kaggle username:Your Kaggle Key:Dataset URL: https://www.kaggle.com/datasets/mssmartypants/rice-type-classification\n",
-      "Downloading rice-type-classification.zip to .\\rice-type-classification\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 888k/888k [00:00<00:00, 286MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Skipping, found downloaded files in \".\\rice-type-classification\" (use force=True to force download)\n"
      ]
     }
    ],
@@ -44,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ce8d9638",
    "metadata": {},
    "outputs": [
@@ -74,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f2e876cb",
    "metadata": {},
    "outputs": [
@@ -209,7 +186,7 @@
        "4      68.571668  0.769375    230.332   0.874743      1.510000      1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,6 +194,17 @@
    "source": [
     "data_df=pd.read_csv(\"rice-type-classification/riceClassification.csv\")\n",
     "data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4608c9ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_df.dropna(inplace=True)\n",
+    "data_df.drop(['id'], axis=1, inplace=True)"
    ]
   }
  ],
