commit	modified:   src/document.ipynb

--- a/src/document.ipynb
+++ b/src/document.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f2e876cb",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "4      68.571668  0.769375    230.332   0.874743      1.510000      1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,14 +198,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "4608c9ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: (18185, 11)\n"
+     ]
+    }
+   ],
    "source": [
     "data_df.dropna(inplace=True)\n",
-    "data_df.drop(['id'], axis=1, inplace=True)"
+    "data_df.drop(['id'], axis=1, inplace=True)\n",
+    "print(f\"Dataset shape: {data_df.shape}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0edd46d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>MajorAxisLength</th>\n",
+       "      <th>MinorAxisLength</th>\n",
+       "      <th>Eccentricity</th>\n",
+       "      <th>ConvexArea</th>\n",
+       "      <th>EquivDiameter</th>\n",
+       "      <th>Extent</th>\n",
+       "      <th>Perimeter</th>\n",
+       "      <th>Roundness</th>\n",
+       "      <th>AspectRation</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4537</td>\n",
+       "      <td>92.229316</td>\n",
+       "      <td>64.012769</td>\n",
+       "      <td>0.719916</td>\n",
+       "      <td>4677</td>\n",
+       "      <td>76.004525</td>\n",
+       "      <td>0.657536</td>\n",
+       "      <td>273.085</td>\n",
+       "      <td>0.764510</td>\n",
+       "      <td>1.440796</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2872</td>\n",
+       "      <td>74.691881</td>\n",
+       "      <td>51.400454</td>\n",
+       "      <td>0.725553</td>\n",
+       "      <td>3015</td>\n",
+       "      <td>60.471018</td>\n",
+       "      <td>0.713009</td>\n",
+       "      <td>208.317</td>\n",
+       "      <td>0.831658</td>\n",
+       "      <td>1.453137</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3048</td>\n",
+       "      <td>76.293164</td>\n",
+       "      <td>52.043491</td>\n",
+       "      <td>0.731211</td>\n",
+       "      <td>3132</td>\n",
+       "      <td>62.296341</td>\n",
+       "      <td>0.759153</td>\n",
+       "      <td>210.012</td>\n",
+       "      <td>0.868434</td>\n",
+       "      <td>1.465950</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3073</td>\n",
+       "      <td>77.033628</td>\n",
+       "      <td>51.928487</td>\n",
+       "      <td>0.738639</td>\n",
+       "      <td>3157</td>\n",
+       "      <td>62.551300</td>\n",
+       "      <td>0.783529</td>\n",
+       "      <td>210.657</td>\n",
+       "      <td>0.870203</td>\n",
+       "      <td>1.483456</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3693</td>\n",
+       "      <td>85.124785</td>\n",
+       "      <td>56.374021</td>\n",
+       "      <td>0.749282</td>\n",
+       "      <td>3802</td>\n",
+       "      <td>68.571668</td>\n",
+       "      <td>0.769375</td>\n",
+       "      <td>230.332</td>\n",
+       "      <td>0.874743</td>\n",
+       "      <td>1.510000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Area  MajorAxisLength  MinorAxisLength  Eccentricity  ConvexArea  \\\n",
+       "0  4537        92.229316        64.012769      0.719916        4677   \n",
+       "1  2872        74.691881        51.400454      0.725553        3015   \n",
+       "2  3048        76.293164        52.043491      0.731211        3132   \n",
+       "3  3073        77.033628        51.928487      0.738639        3157   \n",
+       "4  3693        85.124785        56.374021      0.749282        3802   \n",
+       "\n",
+       "   EquivDiameter    Extent  Perimeter  Roundness  AspectRation  Class  \n",
+       "0      76.004525  0.657536    273.085   0.764510      1.440796      1  \n",
+       "1      60.471018  0.713009    208.317   0.831658      1.453137      1  \n",
+       "2      62.296341  0.759153    210.012   0.868434      1.465950      1  \n",
+       "3      62.551300  0.783529    210.657   0.870203      1.483456      1  \n",
+       "4      68.571668  0.769375    230.332   0.874743      1.510000      1  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2f166df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_df['Class'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f2b3cdf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class\n",
+      "1    9985\n",
+      "0    8200\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_df['Class'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b185b85c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
