commit	modified:   src/document.ipynb

--- a/src/document.ipynb
+++ b/src/document.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f2e876cb",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "4      68.571668  0.769375    230.332   0.874743      1.510000      1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "4608c9ab",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0edd46d0",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "4      68.571668  0.769375    230.332   0.874743      1.510000      1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2f166df9",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f2b3cdf7",
    "metadata": {},
    "outputs": [
@@ -397,11 +397,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b185b85c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>MajorAxisLength</th>\n",
+       "      <th>MinorAxisLength</th>\n",
+       "      <th>Eccentricity</th>\n",
+       "      <th>ConvexArea</th>\n",
+       "      <th>EquivDiameter</th>\n",
+       "      <th>Extent</th>\n",
+       "      <th>Perimeter</th>\n",
+       "      <th>Roundness</th>\n",
+       "      <th>AspectRation</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.444368</td>\n",
+       "      <td>0.503404</td>\n",
+       "      <td>0.775435</td>\n",
+       "      <td>0.744658</td>\n",
+       "      <td>0.424873</td>\n",
+       "      <td>0.666610</td>\n",
+       "      <td>0.741661</td>\n",
+       "      <td>0.537029</td>\n",
+       "      <td>0.844997</td>\n",
+       "      <td>0.368316</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.281293</td>\n",
+       "      <td>0.407681</td>\n",
+       "      <td>0.622653</td>\n",
+       "      <td>0.750489</td>\n",
+       "      <td>0.273892</td>\n",
+       "      <td>0.530370</td>\n",
+       "      <td>0.804230</td>\n",
+       "      <td>0.409661</td>\n",
+       "      <td>0.919215</td>\n",
+       "      <td>0.371471</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.298531</td>\n",
+       "      <td>0.416421</td>\n",
+       "      <td>0.630442</td>\n",
+       "      <td>0.756341</td>\n",
+       "      <td>0.284520</td>\n",
+       "      <td>0.546380</td>\n",
+       "      <td>0.856278</td>\n",
+       "      <td>0.412994</td>\n",
+       "      <td>0.959862</td>\n",
+       "      <td>0.374747</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.300979</td>\n",
+       "      <td>0.420463</td>\n",
+       "      <td>0.629049</td>\n",
+       "      <td>0.764024</td>\n",
+       "      <td>0.286791</td>\n",
+       "      <td>0.548616</td>\n",
+       "      <td>0.883772</td>\n",
+       "      <td>0.414262</td>\n",
+       "      <td>0.961818</td>\n",
+       "      <td>0.379222</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.361704</td>\n",
+       "      <td>0.464626</td>\n",
+       "      <td>0.682901</td>\n",
+       "      <td>0.775033</td>\n",
+       "      <td>0.345385</td>\n",
+       "      <td>0.601418</td>\n",
+       "      <td>0.867808</td>\n",
+       "      <td>0.452954</td>\n",
+       "      <td>0.966836</td>\n",
+       "      <td>0.386007</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Area  MajorAxisLength  MinorAxisLength  Eccentricity  ConvexArea  \\\n",
+       "0  0.444368         0.503404         0.775435      0.744658    0.424873   \n",
+       "1  0.281293         0.407681         0.622653      0.750489    0.273892   \n",
+       "2  0.298531         0.416421         0.630442      0.756341    0.284520   \n",
+       "3  0.300979         0.420463         0.629049      0.764024    0.286791   \n",
+       "4  0.361704         0.464626         0.682901      0.775033    0.345385   \n",
+       "\n",
+       "   EquivDiameter    Extent  Perimeter  Roundness  AspectRation  Class  \n",
+       "0       0.666610  0.741661   0.537029   0.844997      0.368316    1.0  \n",
+       "1       0.530370  0.804230   0.409661   0.919215      0.371471    1.0  \n",
+       "2       0.546380  0.856278   0.412994   0.959862      0.374747    1.0  \n",
+       "3       0.548616  0.883772   0.414262   0.961818      0.379222    1.0  \n",
+       "4       0.601418  0.867808   0.452954   0.966836      0.386007    1.0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_df = data_df.copy()\n",
+    "for column in data_df.columns:\n",
+    "    data_df[column] = data_df[column]/data_df[column].abs().max()\n",
+    "\n",
+    "data_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d6d0e7cb",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.array(data_df.iloc[:, :-1])\n",
+    "y = np.array(data_df.iloc[:, -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9efd30f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ff068be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test, x_val, y_test, y_val = train_test_split(x_test, y_test, test_size=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "600da864",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12729, 10) (2728, 10) (2728, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape, x_val.shape , x_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e7f9bac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class dataset(Dataset):\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = torch.tensor(x, dtype=torch.float32).to(device)\n",
+    "        self.y = torch.tensor(y, dtype=torch.float32).to(device)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.x)\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        return self.x[index], self.y[index]\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0d9d2150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data= dataset(x_train, y_train)\n",
+    "validation_data = dataset(x_val, y_val)\n",
+    "testing_data = dataset(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ac55df74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader = DataLoader(training_data, batch_size=8, shuffle=True)\n",
+    "validation_dataloader = DataLoader(validation_data, batch_size=8, shuffle=False)\n",
+    "testing_dataloader = DataLoader(testing_data, batch_size=8, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5f7ca785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HIDDEN_NEURONS = 10\n",
+    "\n",
+    "class MyModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(MyModel, self).__init__()\n",
+    "\n",
+    "        self.input_layer = nn.Linear(x.shape[1], HIDDEN_NEURONS)\n",
+    "        self.output_layer = nn.Linear(HIDDEN_NEURONS, 1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.input_layer(x)\n",
+    "        x = self.output_layer(x)\n",
+    "        x = self.sigmoid(x)\n",
+    "        return x\n",
+    "    \n",
+    "model= MyModel().to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7ec21dc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Linear-1                   [-1, 10]             110\n",
+      "            Linear-2                    [-1, 1]              11\n",
+      "           Sigmoid-3                    [-1, 1]               0\n",
+      "================================================================\n",
+      "Total params: 121\n",
+      "Trainable params: 121\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.00\n",
+      "Forward/backward pass size (MB): 0.00\n",
+      "Params size (MB): 0.00\n",
+      "Estimated Total Size (MB): 0.00\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary(model, (x.shape[1],))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1f603861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.BCELoss()\n",
+    "optimizer = Adam(model.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee52e6d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_loss_train_plot = []\n",
+    "total_loss_val_plot = []\n",
+    "total_acc_train_plot = []\n",
+    "total_acc_val_plot = []\n",
+    "\n",
+    "epochs = 10\n",
+    "for epoch in range(epochs):\n",
+    "    total_acc_train = 0\n",
+    "    total_loss_train = 0\n",
+    "    total_acc_val= 0\n",
+    "    total_loss_val = 0\n",
+    "\n",
+    "for data in train_dataloader:\n",
+    "    inputs, labels = data\n",
+    "\n",
+    "    prediction = model(inputs).squeeze(1)\n",
+    "    batch_loss = criterion(prediction, labels)\n",
+    "\n",
+    "    total_loss_train += batch_loss.item()\n",
+    "    acc=((prediction).round()==labels)\n"
+   ]
   }
  ],
  "metadata": {
