commit	modified:   src/document.ipynb

--- a/src/document.ipynb
+++ b/src/document.ipynb
@@ -623,19 +623,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "ac55df74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataloader = DataLoader(training_data, batch_size=8, shuffle=True)\n",
-    "validation_dataloader = DataLoader(validation_data, batch_size=8, shuffle=False)\n",
-    "testing_dataloader = DataLoader(testing_data, batch_size=8, shuffle=False)"
+    "train_dataloader = DataLoader(training_data, batch_size=32, shuffle=True)\n",
+    "validation_dataloader = DataLoader(validation_data, batch_size=32, shuffle=False)\n",
+    "testing_dataloader = DataLoader(testing_data, batch_size=32, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "5f7ca785",
    "metadata": {},
    "outputs": [],
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "7ec21dc1",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "1f603861",
    "metadata": {},
    "outputs": [],
@@ -705,10 +705,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "ee52e6d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch no. 1 Train Loss: 0.2305 \n",
+      "          Train Accuracy 82.7481 \n",
+      "          Validation Loss:0.0359\n",
+      "          validation Accuracy:97.544\n",
+      "epoch no. 2 Train Loss: 0.1095 \n",
+      "          Train Accuracy 98.0124 \n",
+      "          Validation Loss:0.0151\n",
+      "          validation Accuracy:98.4604\n",
+      "epoch no. 3 Train Loss: 0.0525 \n",
+      "          Train Accuracy 98.3974 \n",
+      "          Validation Loss:0.0087\n",
+      "          validation Accuracy:98.2405\n",
+      "epoch no. 4 Train Loss: 0.0344 \n",
+      "          Train Accuracy 98.4838 \n",
+      "          Validation Loss:0.0064\n",
+      "          validation Accuracy:98.3138\n",
+      "epoch no. 5 Train Loss: 0.0266 \n",
+      "          Train Accuracy 98.5781 \n",
+      "          Validation Loss:0.0051\n",
+      "          validation Accuracy:98.4971\n",
+      "epoch no. 6 Train Loss: 0.0228 \n",
+      "          Train Accuracy 98.5938 \n",
+      "          Validation Loss:0.0044\n",
+      "          validation Accuracy:98.6804\n",
+      "epoch no. 7 Train Loss: 0.0205 \n",
+      "          Train Accuracy 98.6173 \n",
+      "          Validation Loss:0.004\n",
+      "          validation Accuracy:98.7537\n",
+      "epoch no. 8 Train Loss: 0.0191 \n",
+      "          Train Accuracy 98.6723 \n",
+      "          Validation Loss:0.0038\n",
+      "          validation Accuracy:98.7537\n",
+      "epoch no. 9 Train Loss: 0.0182 \n",
+      "          Train Accuracy 98.6802 \n",
+      "          Validation Loss:0.0036\n",
+      "          validation Accuracy:98.607\n",
+      "epoch no. 10 Train Loss: 0.0176 \n",
+      "          Train Accuracy 98.633 \n",
+      "          Validation Loss:0.0034\n",
+      "          validation Accuracy:98.7903\n"
+     ]
+    }
+   ],
    "source": [
     "total_loss_train_plot = []\n",
     "total_loss_val_plot = []\n",
@@ -722,23 +769,74 @@
     "    total_acc_val= 0\n",
     "    total_loss_val = 0\n",
     "\n",
-    "for data in train_dataloader:\n",
-    "    inputs, labels = data\n",
+    "    for data in train_dataloader:\n",
+    "        inputs, labels = data\n",
     "\n",
-    "    prediction = model(inputs).squeeze(1)\n",
-    "    batch_loss = criterion(prediction, labels)\n",
+    "        prediction = model(inputs).squeeze(1)\n",
+    "        batch_loss = criterion(prediction, labels)\n",
     "\n",
-    "    total_loss_train += batch_loss.item()\n",
-    "    acc=((prediction).round()==labels)\n"
+    "        total_loss_train += batch_loss.item()\n",
+    "        acc=((prediction).round()==labels).sum().item()\n",
+    "        total_acc_train += acc\n",
+    "        \n",
+    "        batch_loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for data in validation_dataloader:\n",
+    "            inputs, labels = data\n",
+    "\n",
+    "            prediction = model(inputs).squeeze(1)\n",
+    "            batch_loss = criterion(prediction, labels)\n",
+    "\n",
+    "            total_loss_val += batch_loss.item()\n",
+    "            acc = ((prediction).round() == labels).sum().item()\n",
+    "            total_acc_val += acc\n",
+    "\n",
+    "    total_loss_train_plot.append(round(total_loss_train/1000,4))\n",
+    "    total_loss_val_plot.append(round(total_loss_val/1000,4))\n",
+    "    \n",
+    "    total_acc_train_plot.append(round(total_acc_train/training_data.__len__() *100,4))\n",
+    "    total_acc_train_plot.append(round(total_loss_val/validation_data.__len__()*100,4))\n",
+    "\n",
+    "    print(f'''epoch no. {epoch + 1} Train Loss: {round(total_loss_train/1000,4)} \n",
+    "          Train Accuracy {round(total_acc_train/training_data.__len__() * 100,4)} \n",
+    "          Validation Loss:{round(total_loss_val/1000,4)}\n",
+    "          validation Accuracy:{round(total_acc_val/validation_data.__len__()*100,4)}''') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4f9b88de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 98.4238\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    total_loss_test = 0\n",
+    "    total_acc_test = 0\n",
+    "    for data in testing_dataloader:\n",
+    "        inputs,labels=data\n",
+    "        \n",
+    "        prediction = model(inputs).squeeze(1)\n",
+    "        batch_loss_test = criterion(prediction,labels).item()\n",
+    "        total_loss_test += batch_loss_test\n",
+    "        \n",
+    "        acc =((prediction).round()==labels).sum().item()\n",
+    "        total_acc_test += acc\n",
+    "        \n",
+    "        \n",
+    "print(\"accuracy:\",round(total_acc_test/testing_data.__len__()*100,4))"
+   ]
   }
  ],
  "metadata": {
